# learnOpenGL

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/: shader.h
shaders/: shader.fs  shader.vs
src/: main.cpp
